# src/routes/eCommerceRouter.ts
@@ -13,6 +13,7 @@ import deleteShoes from "../controllers/deleteShoes.js";
 import adminVerifyToken from "../middlewears/admin-auth-middleware.js";
 import deleteShoesByAdmin from "../controllers/deleteShoesByAdmin.js";
 import UsersListForAdminPanel from "../controllers/usersListForAdminPanel.js";
+import deleteUserbyAdmin from "../controllers/deleteUserbyAdmin.js";
 
 const fileStorage = multer.diskStorage({
   destination: (_, _file, cb) => {
@@ -55,5 +56,6 @@ eCommerceRouter.delete(
   deleteShoesByAdmin
 );
 eCommerceRouter.get("/getAllUsers", UsersListForAdminPanel);
+eCommerceRouter.delete("/deleteUserByAdmin/:id", deleteUserbyAdmin);
 
 export default eCommerceRouter;
